--- a/mclib/build.gradle
+++ b/mclib/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 
 android {
@@ -12,6 +11,7 @@ android {
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
+
     }
     buildTypes {
         release {
@@ -22,11 +22,5 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-}
-repositories {
-    mavenCentral()
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
