--- a/mclib/build.gradle
+++ b/mclib/build.gradle
@@ -23,4 +23,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'org.kie.modules:org-apache-commons-lang3:6.5.0.Final'
 }
