--- a/projectfoundation/build.gradle
+++ b/projectfoundation/build.gradle
@@ -24,6 +24,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile project(":mclib")
 }
 repositories {
     mavenCentral()
