--- a/projectfoundation/src/main/AndroidManifest.xml
+++ b/projectfoundation/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.maxwell.projectfoundation" />
+    package="com.maxwell.projectfoundation">
+
+    <uses-sdk android:minSdkVersion="14"
+        android:targetSdkVersion="20"/>
+</manifest>
