--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,20 +9,23 @@ android {
         applicationId "com.maxwell.taxhelper"
         minSdkVersion 14
         targetSdkVersion 20
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "2.0"
     }
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile project(':jazzyviewpager')
     compile project(':mclib')
     compile project(':projectfoundation')
