--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.4-2'
 
     repositories {
         maven { url 'https://dl.google.com/dl/android/maven2' }
@@ -21,6 +21,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://dl.google.com/dl/android/maven2' }
+        maven { url "https://jitpack.io" }
     }
 }
 
