--- a/mclib/build.gradle
+++ b/mclib/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
 
 
     defaultConfig {
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -28,6 +31,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.kie.modules:org-apache-commons-lang3:6.5.0.Final'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.belerweb:pinyin4j:2.5.1'
+    compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
 repositories {
     mavenCentral()
