--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,14 @@
                 android:name="moduleName"
                 android:value="cityList" />
         </activity>
+        <activity
+            android:name=".AboutUsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme">
+            <meta-data
+                android:name="moduleName"
+                android:value="aboutUs" />
+        </activity>
 
         <service android:name="com.amap.api.location.APSService"></service>
         <meta-data
