--- a/mclib/build.gradle
+++ b/mclib/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     compile 'com.belerweb:pinyin4j:2.5.1'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+
+
+
 }
 repositories {
     mavenCentral()
