--- a/mclib/build.gradle
+++ b/mclib/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.1'
 
 
 
